Fix spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -81,7 +81,7 @@ h1 + .section {
 
 .section.hero {
   padding-bottom: 1rem;
-  margin-top: 0;
+  padding-top: 0;
 
   .image-col {
     flex: .7;
